fix title overlap bug

--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,7 @@ button {
   top: 1rem;
   left: 35%;
   width: 30%;
+  height: 10%;
   z-index: 1001;
   background: white;
 }
